--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
       </p>
 
-      <h4> Journal Papers:</h4>
+      <h4> Academic Journals:</h4>
       <ol>
 
         <p>
@@ -313,7 +313,7 @@
 
       </ol>
 
-      <h4> Conference Papers:</h4>
+      <h4> Conference Proceedings: </h4>
       <ol>
         <p>
         <li><a href="https://doi.org/10.1117/12.2576299"><strong>RestoreNet: a deep learning framework for image restoration in optical multi-aperture imaging system</strong></a>
