--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <!--        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">-->
           I am <strong>Kaiqiang Wang</strong>, now a postdoctoral researcher in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong (HKU).
           Before that, I did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong (CUHK).
-          I received my PhD at Northwestern Polytechnical University (NPU) under the supervision of <a href="https://teacher.nwpu.edu.cn/m/en/1982000067.html">Prof. Jianlin Zhao</a></a>.
+          I received my PhD at Northwestern Polytechnical University (NPU) under the supervision of <a href="https://teacher.nwpu.edu.cn/m/en/1982000067.html">Prof. Jianlin Zhao</a>, <a href="https://scholar.google.com/citations?user=QlJKQxEAAAAJ&hl">Prof. Jianglei Di</a>, and <a href="https://scholar.google.com/citations?user=JCehBDoAAAAJ&hl">Prof. Kemao Qian</a>.
           <br><br>I am an enthusiast for <strong>computational imaging</strong> and <strong>deep learning</strong>.
         </p>
 
