--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       Major: Applied Physics
       </p>
 
-      <li><em>2009-2012</em>, Meixian High school, Shaanxi province, China.
+      <li><em>2009-2012</em>, Meixian High School, Shaanxi province, China.
       <br>
 
       </p>
