--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <div class="w3-container w3-padding-32" id="awards">
     <h2>Awards</h2>
       <p>
-      <li>During my student period, I was awarded the <em>Three Good Student</em> and the <em>Excellent Young Pioneer</em> many times.
+      <li>During my student period, I was awarded the <em>Three Good Student</em> and the <em>Excellent Young Pioneer</em> many times. &#128517
 
       </p>
       </li>
