--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <title>Kaiqiang Wang's Homepage</title>
+  <title>Kaiqiang's Homepage</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -54,11 +54,11 @@
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
-  <div class="w3-container w3-display-container w3-padding-16">
+  <div class="w3-container w3-center w3-display-container w3-padding-16">
     <h3><b>
 
-      <img style="width: 80%;max-width: 150px" alt="profile photo" src="images/photo.png">
-      </h2>Kaiqiang Wang</h2>
+      <img style="width: 80%;max-width: 150px" alt="profile photo" src="images/photo.png" >
+      </h2>Kaiqiang Wang<br>(王凯强)</h2>
 
     </b></h3>
   </div>
@@ -77,9 +77,9 @@
 
 <!-- Top menu on small screens -->
 <header class="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
-  <div class="w3-bar-item w3-padding-24">
+  <div class="w3-bar-item w3-center w3-padding-24">
 
-    Kaiqiang Wang
+    Kaiqiang Wang (王凯强)
 
   </div>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-24 w3-right"  style="font-stretch: extra-expanded;" onclick="w3_open()"><b>≡</b></a>
