--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
   <div class="w3-container w3-padding-32" id="services">
     <h2>Services</h2>
     <h4> Journal Reviewer: </h4>
-    Applied Optics, Frontiers in Physics, Journal of the Optical Society of America A, Light: Science & Applications, Optics Communications, Optics Continuum, Optics Express, Optics and Lasers in Engineering, IEEE Photonics Technology Letters.
+    Applied Optics, Biomedical Optics Express, Frontiers in Physics, Journal of the Optical Society of America A, Light: Science & Applications, Optics Communications, Optics Continuum, Optics Express, Optics and Lasers in Engineering, IEEE Photonics Technology Letters.
   </div>
 
     <!-- The Resources Section -->
