--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h3><b>
 
       <img style="width: 80%;max-width: 150px" alt="profile photo" src="images/photo.png" >
-      </h2>Kaiqiang Wang<br>(王凯强)</h2>
+      </h2>Kaiqiang Wang</h2>
 
     </b></h3>
   </div>
@@ -79,7 +79,7 @@
 <header class="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
   <div class="w3-bar-item w3-center w3-padding-24">
 
-    Kaiqiang Wang (王凯强)
+    Kaiqiang Wang
 
   </div>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-24 w3-right"  style="font-stretch: extra-expanded;" onclick="w3_open()"><b>≡</b></a>
