--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <ol>
 
         <p>
-        <li><a href="https://doi.org/10.3389/fphy.2023.1190616"><strong>Real-time phase measurement of optical vortex via digital holography</strong></a>
+        <li><a href="https://doi.org/10.3389/fphy.2023.1190616">Real-time phase measurement of optical vortex via digital holography</a>
         <br>
         H. Qiu, X. Liu, <strong>K. Wang</strong>, J. Dou, J. Di, and Y. Qin
         <br>
@@ -175,7 +175,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.3389/fphy.2023.1190616"><strong>Light-field focusing and modulation through scattering media based on dual-polarization-encoded digital optical phase conjugation</strong></a>
+        <li><a href="https://doi.org/10.3389/fphy.2023.1190616">Light-field focusing and modulation through scattering media based on dual-polarization-encoded digital optical phase conjugation</a>
         <br>
         J. Dou, C. Ma, <strong>K. Wang</strong>, J. Di, J. Zhang, and J. Zhao
         <br>
@@ -191,7 +191,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1016/j.optlaseng.2021.106707"><strong>RestoreNet-Plus: Image restoration via deep learning in optical synthetic aperture imaging system</strong></a>
+        <li><a href="https://doi.org/10.1016/j.optlaseng.2021.106707">RestoreNet-Plus: Image restoration via deep learning in optical synthetic aperture imaging system</a>
         <br>
         J. Tang, J. Wu, <strong>K. Wang</strong>, Z. Ren, X. Wu, L. Hu, J. Di, G. Liu, and J. Zhao
         <br>
@@ -199,7 +199,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1016/j.optlaseng.2020.106463"><strong>RestoreNet: a deep learning framework for image restoration in optical synthetic aperture imaging system</strong></a>
+        <li><a href="https://doi.org/10.1016/j.optlaseng.2020.106463">RestoreNet: a deep learning framework for image restoration in optical synthetic aperture imaging system</a>
         <br>
         J. Tang, <strong>K. Wang</strong>, Z. Ren, W. Zhang, X. Wu, J. Di, G. Liu, and J. Zhao
         <br>
@@ -207,7 +207,7 @@
         </p>
 
         <p>
-        <li><a href="http://dx.doi.org/10.3788/LOP202158.1600001"><strong>Research Progress in the Applications of Convolutional Neural Networks in Optical Information Processing</strong></a>
+        <li><a href="http://dx.doi.org/10.3788/LOP202158.1600001">Research Progress in the Applications of Convolutional Neural Networks in Optical Information Processing</a>
         <br>
         J. Di, J. Tang, J. Wu, <strong>K. Wang</strong>, Z. Ren, M. Zhang, and J. Zhao
         <br>
@@ -215,7 +215,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.3389/fphy.2021.651313"><strong>Quantitative phase imaging using deep learning-based holographic microscope</strong></a>
+        <li><a href="https://doi.org/10.3389/fphy.2021.651313">Quantitative phase imaging using deep learning-based holographic microscope</a>
         <br>
         J. Di, J. Wu, <strong>K. Wang</strong>, J. Tang, Y. Li, and J. Zhao
         <br>
@@ -223,7 +223,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1364/AO.404276"><strong>Sparse-view imaging of a fiber internal structure in holographic diffraction tomography via a convolutional neural network</strong></a>
+        <li><a href="https://doi.org/10.1364/AO.404276">Sparse-view imaging of a fiber internal structure in holographic diffraction tomography via a convolutional neural network</a>
         <br>
         J. Di, W. Han, S. Liu, <strong>K. Wang</strong>, J. Tang, and J. Zhao
         <br>
@@ -248,7 +248,7 @@
 
 
         <p>
-        <li><a href="http://dx.doi.org/10.3788/AOS202040.2111001"><strong>A deep learning-based image restoration method in optical synthetic aperture imaging system</strong></a>
+        <li><a href="http://dx.doi.org/10.3788/AOS202040.2111001">A deep learning-based image restoration method in optical synthetic aperture imaging system</a>
         <br>
         J. Tang, <strong>K. Wang</strong>, W. Zhang, X. Wu, G. Liu, J. Di, and J. Zhao
         <br>
@@ -256,7 +256,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1364/OE.397029"><strong>Classification of cell morphology with quantitative phase microscopy and machine learning</strong></a>
+        <li><a href="https://doi.org/10.1364/OE.397029">Classification of cell morphology with quantitative phase microscopy and machine learning</a>
         <br>
         Y. Li, J. Di, <strong>K. Wang</strong>, S. Wang, and J. Zhao
         <br>
@@ -280,7 +280,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1364/OE.26.000586"><strong>Quantitative phase microscopy for cellular dynamics based on transport of intensity equation</strong></a>
+        <li><a href="https://doi.org/10.1364/OE.26.000586">Quantitative phase microscopy for cellular dynamics based on transport of intensity equation</a>
         <br>
         Y. Li, J. Di, C. Ma, J. Zhang, J. Zhong, <strong>K. Wang</strong>, T. Xi, and J. Zhao
         <br>
@@ -288,7 +288,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1117/1.OE.57.2.024108"><strong>Quasicommon-path digital holographic microscopy with phase aberration compensation based on a long-working distance objective</strong></a>
+        <li><a href="https://doi.org/10.1117/1.OE.57.2.024108">Quasicommon-path digital holographic microscopy with phase aberration compensation based on a long-working distance objective</a>
         <br>
         J. Di, <strong>K. Wang</strong>, J. Zhang, C. Ma, T. Xi, Y. Li, K. Wei, W. Qu, and J. Zhao
         <br>
@@ -296,7 +296,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1109/JPHOT.2018.2839878"><strong>Quantitative and dynamic phase imaging of biological cells by the use of the digital holographic microscopy based on a beam displacer unit</strong></a>
+        <li><a href="https://doi.org/10.1109/JPHOT.2018.2839878">Quantitative and dynamic phase imaging of biological cells by the use of the digital holographic microscopy based on a beam displacer unit</a>
         <br>
         J. Di, Y. Li, <strong>K. Wang</strong>, and J. Zhao
         <br>
@@ -304,7 +304,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1117/1.OE.56.11.111712"><strong>Dual-wavelength common-path digital holographic microscopy for quantitative phase imaging of biological cells</strong></a>
+        <li><a href="https://doi.org/10.1117/1.OE.56.11.111712">Dual-wavelength common-path digital holographic microscopy for quantitative phase imaging of biological cells</a>
         <br>
         J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, <strong>K. Wang</strong>, and J. Zhao
         <br>
@@ -316,7 +316,7 @@
       <h4> Conference Proceedings: </h4>
       <ol>
         <p>
-        <li><a href="https://doi.org/10.1117/12.2576299"><strong>RestoreNet: a deep learning framework for image restoration in optical multi-aperture imaging system</strong></a>
+        <li><a href="https://doi.org/10.1117/12.2576299">RestoreNet: a deep learning framework for image restoration in optical multi-aperture imaging system</a>
         <br>
         J. Tang, <strong>K. Wang</strong>, X. Wu, J. Di, G. Liu, and J. Zhao
         <br>
@@ -324,7 +324,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1117/12.2573707"><strong>Deep learning in computational imaging</strong></a>
+        <li><a href="https://doi.org/10.1117/12.2573707">Deep learning in computational imaging></a>
         <br>
         J. Di, <strong>K. Wang</strong>, and J. Zhao
         <br>
@@ -332,7 +332,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1364/DH.2020.HTu4B.2"><strong>Deep learning-based holographic reconstruction in digital holography</strong></a>
+        <li><a href="https://doi.org/10.1364/DH.2020.HTu4B.2">Deep learning-based holographic reconstruction in digital holography</a>
         <br>
         J. Di, <strong>K. Wang</strong>, Y. Li, and J. Zhao
         <br>
@@ -340,7 +340,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1117/12.2289324"><strong>Common-path digital holographic microscopy based on a beam displacer unit</strong></a>
+        <li><a href="https://doi.org/10.1117/12.2289324">Common-path digital holographic microscopy based on a beam displacer unit</a>
         <br>
         J. Di, J. Zhang, Y. Song, <strong>K. Wang</strong>, K. Wei, and J. Zhao
         <br>
@@ -348,7 +348,7 @@
         </p>
 
         <p>
-        <li><a href="https://doi.org/10.1117/12.2270774"><strong>Improvement of phase measurement accuracy and stability in dual-wavelength common-path digital holographic microscopy</strong></a>
+        <li><a href="https://doi.org/10.1117/12.2270774">Improvement of phase measurement accuracy and stability in dual-wavelength common-path digital holographic microscopy</a>
         <br>
         J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, <strong>K. Wang</strong>, and J. Zhao
         <br>
