--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
       <ol>
 
         <p>
+        <li><a href="https://doi.org/10.48550/arXiv.2308.00942"><strong>On the use of deep learning for phase recovery</strong></a>
+        <br>
+        <strong>K. Wang</strong>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
+        <br>
+        <em>Preprint in arXiv</em> 2023 | <a style="color: #447ec9" href="https://arxiv.org/ftp/arxiv/papers/2308/2308.00942.pdf">PDF</a>
+        </p>
+
+        <p>
         <li><a href="https://doi.org/10.3389/fphy.2023.1190616">Real-time phase measurement of optical vortex via digital holography</a>
         <br>
         H. Qiu, X. Liu, <strong>K. Wang</strong>, J. Dou, J. Di, and Y. Qin
@@ -380,7 +388,16 @@
   <div class="w3-container w3-light-grey w3-padding-32" id="resources">
     <h2>Resources</h2>
       <p>
-      In doing.
+        <ol>
+          <p>
+          <a href="https://github.com/kqwang/phase-recovery">Resource for phase recovery</a>.
+          </p>
+
+          <p>
+          <a href="https://github.com/kqwang/computational-imaging">Resource for computational imaging</a>.
+          </p>
+
+        </ol>
       </p>
       </li>
   </div>
