--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <br>
         <strong>K. Wang</strong>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
-        <em>Preprint in arXiv</em> 2023 | <a style="color: #447ec9" href="https://arxiv.org/ftp/arxiv/papers/2308/2308.00942.pdf">PDF</a>
+        <em>Preprint in arXiv</em> 2023 | <a style="color: #447ec9" href="https://arxiv.org/ftp/arxiv/papers/2308/2308.00942.pdf">PDF</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">Resource</a>
         </p>
 
         <p>
