--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
         </p>
 
         <p class="w3-center">
-          <br><br><a href="https://github.com/kqwang">Github</a>
+          <a href="https://github.com/kqwang">Github</a> &nbsp/&nbsp
+          <a href="https://scholar.google.com/citations?user=d1dITQkAAAAJ">Google Scholar</a>
         </p>
         </tbody></table>
   </div>
