--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 <!--      <img style="width: 80%;max-width: 80px" alt="profile photo" src="images/kaiqiang.png">-->
 <!--      <h1>Kaiqiang Wang</h1>-->
 <!--        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">-->
-          I am <strong>Kaiqiang Wang</strong>, now a postdoctoral researcher in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong (HKU).
-          Before that, I did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong (CUHK).
-          I received my PhD at Northwestern Polytechnical University (NPU) under the supervision of <a href="https://teacher.nwpu.edu.cn/m/en/1982000067.html">Prof. Jianlin Zhao</a>, <a href="https://scholar.google.com/citations?user=QlJKQxEAAAAJ&hl">Prof. Jianglei Di</a>, and <a href="https://www3.ntu.edu.sg/home/mkmqian/">Prof. Kemao Qian</a>.
-          <br><br>I am an enthusiast for <strong>computational imaging</strong> and <strong>deep learning</strong>.
+          <strong>Kaiqiang Wang</strong> is a postdoctoral fellow in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong (HKU).
+          Before that, he did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong (CUHK).
+          He received his PhD at Northwestern Polytechnical University (NPU) under the supervision of <a href="https://teacher.nwpu.edu.cn/m/en/1982000067.html">Prof. Jianlin Zhao</a>, <a href="https://scholar.google.com/citations?user=QlJKQxEAAAAJ&hl">Prof. Jianglei Di</a>, and <a href="https://www3.ntu.edu.sg/home/mkmqian/">Prof. Kemao Qian</a>.
+          <br><br>He is an enthusiast for <strong>computational imaging</strong> and <strong>deep learning</strong>.
         </p>
 
         <p class="w3-center">
@@ -139,7 +139,7 @@
   <div class="w3-container w3-padding-32" id="awards">
     <h2>Awards</h2>
       <p>
-      <li>During my student period, I was awarded the <em>Three Good Student</em> and the <em>Excellent Young Pioneer</em> many times.  &#128526
+      <li>During his student period, he was awarded the honor of <em>Three Good Student</em> and the <em>Excellent Young Pioneer</em>.  &#128526
 
       </p>
       </li>
@@ -161,7 +161,7 @@
         <br>
         <strong>K. Wang</strong>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
-        <em>Preprint in arXiv</em> 2023 | <a style="color: #447ec9" href="https://arxiv.org/ftp/arxiv/papers/2308/2308.00942.pdf">PDF</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">Resource</a>
+        <em>Accepted by Light: Science and Applications</em> | <a style="color: #447ec9" href="https://arxiv.org/ftp/arxiv/papers/2308/2308.00942.pdf">Preprint PDF (2023)</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">Resource</a>
         </p>
 
         <p>
