--- a/index.html
+++ b/index.html
@@ -379,7 +379,15 @@
   <div class="w3-container w3-padding-32" id="services">
     <h2>Services</h2>
     <h4> Journal Reviewer: </h4>
-    Applied Optics, Biomedical Optics Express, Frontiers in Physics, Journal of the Optical Society of America A, Light: Science & Applications, Optics Communications, Optics Continuum, Optics Express, Optics and Lasers in Engineering, IEEE Photonics Technology Letters.
+    Nature Publishing Group: Light: Science & Applications
+    <br>
+    The Institute of Electrical and Electronics Engineers: IEEE Transactions on Image Processing, IEEE Photonics Technology Letters,
+IEEE Photonics Journal
+    <br>
+    Optica Publishing Group: Biomedical Optics Express, Optics Express, Applied Optics, Journal of the Optical Society
+of America A, Optics Continuum
+    <br>
+    Elsevier: Optics and Lasers in Engineering, Optics Communications
   </div>
 
     <!-- The Resources Section -->
