--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
   <div class="w3-container w3-light-grey w3-padding-32" id="educations">
     <h2>Educations</h2>
       <p>
-      <li><em>2016-2022</em>, PhD, Northwestern Polytechnical University, Xi'an, China.
+      <li><em>2016-2022</em>, Northwestern Polytechnical University, Xi'an, China.
       <br>
-      Major: Optical Engineering
+      PhD, Optical Engineering
       </p>
 
 
-      <li><em>2012-2016</em>, BSc, Northwestern Polytechnical University, Xi'an, China.
+      <li><em>2012-2016</em>, Northwestern Polytechnical University, Xi'an, China.
       <br>
-      Major: Applied Physics
+      BSc, Applied Physics
       </p>
 
       </p>
