--- a/index.html
+++ b/index.html
@@ -379,15 +379,18 @@
   <div class="w3-container w3-padding-32" id="services">
     <h2>Services</h2>
     <h4> Journal Reviewer: </h4>
-    Nature Publishing Group: Light: Science & Applications
+    Nature Publishing Group: Light: Science & Applications.
+    <br>
     <br>
     The Institute of Electrical and Electronics Engineers: IEEE Transactions on Image Processing, IEEE Photonics Technology Letters,
-IEEE Photonics Journal
+IEEE Photonics Journal.
+    <br>
     <br>
     Optica Publishing Group: Biomedical Optics Express, Optics Express, Applied Optics, Journal of the Optical Society
-of America A, Optics Continuum
+of America A, Optics Continuum.
     <br>
-    Elsevier: Optics and Lasers in Engineering, Optics Communications
+    <br>
+    Elsevier: Optics and Lasers in Engineering, Optics Communications.
   </div>
 
     <!-- The Resources Section -->
