--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         </p>
 
         <p class="w3-center">
+          <a href="kqwang.optics@gmail.com">Email</a> &nbsp/&nbsp
           <a href="https://github.com/kqwang">Github</a> &nbsp/&nbsp
           <a href="https://scholar.google.com/citations?user=d1dITQkAAAAJ">Google Scholar</a>
         </p>
