--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body class="w3-content" style="max-width:1024px">
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-bar-block w3-blue-gray w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
+<nav class="w3-sidebar w3-bar-block w3-black w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
   <div class="w3-container w3-center w3-display-container w3-padding-16">
     <h3><b>
 
@@ -76,7 +76,7 @@
 </nav>
 
 <!-- Top menu on small screens -->
-<header class="w3-bar w3-top w3-hide-large w3-blue-gray w3-xlarge">
+<header class="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
   <div class="w3-bar-item w3-center w3-padding-24">
 
     Kaiqiang Wang
