--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <p class="w3-center">
           <a href="mailto:kqwang.optics@gmail.com">Email</a> &nbsp/&nbsp
           <a href="https://github.com/kqwang">Github</a> &nbsp/&nbsp
-          <a href="https://scholar.google.com/citations?user=d1dITQkAAAAJ">Google Scholar</a>
+          <a href="https://scholar.google.com/citations?user=K_TBJDUAAAAJ&hl">Google Scholar</a>
         </p>
         </tbody></table>
   </div>
