--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <div class="w3-container w3-padding-32" id="awards">
     <h2>Awards</h2>
       <p>
-      <li> He was awarded the honor of <em>Three Good Student</em> and the <em>Excellent Young Pioneer</em> at the student period.  &#128526
+      <li> He was awarded the honor of <em>Three Good Student</em> and the <em>Excellent Young Pioneer</em> at the student period.
 
       </p>
       </li>
