--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 <!--    <a href="#projects" class="w3-bar-item w3-button">Projects</a>-->
 <!--    <a href="#talks" class="w3-bar-item w3-button">Talks</a>-->
     <a href="#educations" class="w3-bar-item w3-button">Educations</a>
-    <a href="#awards" class="w3-bar-item w3-button">Awards</a>
     <a href="#publications" class="w3-bar-item w3-button">Publications</a>
     <a href="#services" class="w3-bar-item w3-button">Services</a>
+    <a href="#awards" class="w3-bar-item w3-button">Awards</a>
     <a href="#resources" class="w3-bar-item w3-button">Resources</a>
   </div>
 </nav>
@@ -136,19 +136,11 @@
       </li>
   </div>
 
-      <!-- The awards Section -->
-  <div class="w3-container w3-padding-32" id="awards">
-    <h2>Awards</h2>
-      <p>
-      <li> He was awarded the honor of <em>Three Good Student</em> and the <em>Excellent Young Pioneer</em> at the student period.
 
-      </p>
-      </li>
-  </div>
 
 
  <!-- The Publications Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="publications">
+  <div class="w3-container  w3-padding-32" id="publications">
     <h2>Publications</h2>
       <p class="w3-left-align" style="line-height:200%">
 
@@ -377,7 +369,7 @@
 
 
 <!-- The Services Section -->
-  <div class="w3-container w3-padding-32" id="services">
+  <div class="w3-container w3-light-grey w3-padding-32" id="services">
     <h2>Services</h2>
     <h4> Journal Reviewer: </h4>
     Nature Publishing Group: Light: Science & Applications.
@@ -392,6 +384,16 @@ of America A, Optics Continuum.
     <br>
     <br>
     Elsevier: Optics and Lasers in Engineering, Optics Communications.
+  </div>
+
+  <!-- The awards Section -->
+  <div class="w3-container w3-padding-32" id="awards">
+    <h2>Awards</h2>
+      <p>
+      <li> He was awarded the honor of <em>Three Good Student</em> and the <em>Excellent Young Pioneer</em> at the student period.
+
+      </p>
+      </li>
   </div>
 
     <!-- The Resources Section -->
