--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <br>
         <strong>K. Wang</strong>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
-        <em>Light: Science and Applications</em> 2024 | <a style="color: #447ec9" href="https://www.nature.com/articles/s41377-023-01340-x.pdf">PDF</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">Resource</a>
+        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://www.nature.com/articles/s41377-023-01340-x.pdf">PDF</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">Resource</a>
         </p>
 
         <p>
