--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <ol>
 
         <p>
-        <li><a href="https://doi.org/10.48550/arXiv.2308.00942"><strong>On the use of deep learning for phase recovery</strong></a>
+        <li><a href="https://doi.org/10.1038/s41377-023-01340-x"><strong>On the use of deep learning for phase recovery</strong></a>
         <br>
         <strong>K. Wang</strong>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
