--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <br>
         <strong>K. Wang</strong>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
-        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://www.nature.com/articles/s41377-023-01340-x.pdf">PDF</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">Resource</a>
+        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://www.nature.com/articles/s41377-023-01340-x.pdf">PDF</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">Resource</a> | <span style="color:red">Cover Paper</span>
         </p>
 
         <p>
@@ -275,7 +275,7 @@
         <br>
         <strong>K. Wang</strong>, Y. Li, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="/data/2019_OE.pdf">PDF</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:red">ESI Highly Cited Papers </span>
+        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="/data/2019_OE.pdf">PDF</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:red">ESI Highly Cited Paper </span>
         </p>
 
         <p>
