--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <br>
         <strong>K. Wang</strong>, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://www.researching.cn/ArticlePdf/m00105/2022/1/1/014001.pdf">PDF</a> | <a style="color: #447ec9" href="https://www.spiedigitallibrary.org/journals/supplementalcontent/10.1117//1.APN.1.1.014001/APN_1_1_014001_ds001.pdf">supplemental information</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a>
+        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://www.researching.cn/ArticlePdf/m00105/2022/1/1/014001.pdf">PDF</a> | <a style="color: #447ec9" href="https://www.spiedigitallibrary.org/journals/supplementalcontent/10.1117//1.APN.1.1.014001/APN_1_1_014001_ds001.pdf">supplemental information</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <span style="color:red">First article of this journal</span>
         </p>
 
         <p>
