--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <br>
         <strong>K. Wang</strong>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
-        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://www.nature.com/articles/s41377-023-01340-x.pdf">PDF</a> | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">Resource</a> | <span style="color:red">Cover Paper</span>
+        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">code</a> | <a style="color: red" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: red" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: red" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <span style="color:red">Cover Paper</span>
         </p>
 
         <p>
@@ -170,7 +170,7 @@
         <br>
         <strong>K. Wang</strong>, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://www.researching.cn/ArticlePdf/m00105/2022/1/1/014001.pdf">PDF</a> | <a style="color: #447ec9" href="https://www.spiedigitallibrary.org/journals/supplementalcontent/10.1117//1.APN.1.1.014001/APN_1_1_014001_ds001.pdf">supplemental information</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <span style="color:red">First article of this journal</span>
+        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <span style="color:red">First article of this journal</span>
         </p>
 
         <p>
@@ -186,7 +186,7 @@
         <br>
         <strong>K. Wang</strong>, M. Zhang, J. Tang, L. Wang, L. Hu, X. Wu, W. Li, J. Di, G. Liu, and J. Zhao
         <br>
-        <em>PhotoniX</em> 2021 | <a style="color: #447ec9" href="https://photonix.springeropen.com/counter/pdf/10.1186/s43074-021-00030-4.pdf?pdf=button%20sticky">PDF</a>
+        <em>PhotoniX</em> 2021
         </p>
 
         <p>
@@ -234,7 +234,7 @@
         <br>
         <strong>K. Wang</strong>, Jianglei Di, Ying Li, Zhenbo Ren, Qian Kemao, Jianlin Zhao
         <br>
-        <em>Optics and Lasers in Engineering</em> 2020 | <a style="color: #447ec9" href="/data/2020_OLEN.pdf">PDF</a>
+        <em>Optics and Lasers in Engineering</em> 2020
         </p>
 
         <p>
@@ -242,7 +242,7 @@
         <br>
         <strong>K. Wang</strong>, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics Letters</em> 2020 | <a style="color: #447ec9" href="/data/2020_OL.pdf">PDF</a>
+        <em>Optics Letters</em> 2020
         </p>
 
 
@@ -267,7 +267,7 @@
         <br>
         <strong>K. Wang</strong>, J. Dou, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics Letters</em> 2019 | <a style="color: #447ec9" href="/data/2019_OL.pdf">PDF</a> | <span style="color:red">Editors' Pick </span>
+        <em>Optics Letters</em> 2019 | <span style="color:red">Editors' Pick </span>
         </p>
 
         <p>
@@ -275,7 +275,7 @@
         <br>
         <strong>K. Wang</strong>, Y. Li, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="/data/2019_OE.pdf">PDF</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:red">ESI Highly Cited Paper </span>
+        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:red">ESI Highly Cited Paper </span>
         </p>
 
         <p>
