--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <br>
         <strong>K. Wang</strong>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
-        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">code</a> | <a style="color: red" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: red" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: red" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <span style="color:red">Cover Paper</span>
+        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">code</a> | <a style="color: #447ec9" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #447ec9" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #447ec9" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> | <span style="color:red">Cover Paper</span>
         </p>
 
         <p>
