--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 <!--      <img style="width: 80%;max-width: 80px" alt="profile photo" src="images/kaiqiang.png">-->
 <!--      <h1>Kaiqiang Wang</h1>-->
 <!--        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">-->
-          <strong>Kaiqiang Wang</strong> is now a postdoctoral fellow in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong (HKU).
-          Before that, he did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong (CUHK).
-          He received his PhD at Northwestern Polytechnical University (NPU) under the supervision of <a href="https://scholar.google.com/citations?user=i0cHhBQAAAAJ">Prof. Jianlin Zhao</a>, <a href="https://teacher.gdut.edu.cn/jiangleidi">Prof. Jianglei Di</a>, and <a href="https://www3.ntu.edu.sg/home/mkmqian/">Prof. Kemao Qian</a>.
+          <strong>Kaiqiang Wang</strong> is now a postdoctoral fellow in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong.
+          Before that, he did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong.
+          He received his PhD at Northwestern Polytechnical University under the supervision of <a href="https://scholar.google.com/citations?user=i0cHhBQAAAAJ">Prof. Jianlin Zhao</a>, <a href="https://teacher.gdut.edu.cn/jiangleidi">Prof. Jianglei Di</a>, and <a href="https://www3.ntu.edu.sg/home/mkmqian/">Prof. Kemao Qian</a>.
           <br><br>He is an enthusiast for <strong>computational imaging</strong> and <strong>deep learning</strong>.
         </p>
 
