--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <title>Kaiqiang's Homepage</title>
+  <title>Kaiqiang</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -50,13 +50,12 @@
 </head>
 
 
-<body class="w3-content" style="max-width:1024px">
+<body class="w3-content" style="max-width:888px">
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
   <div class="w3-container w3-center w3-display-container w3-padding-16">
     <h3><b>
-
       <img style="width: 80%;max-width: 150px" alt="profile photo" src="images/photo1.png" >
       </h2>Kaiqiang Wang</h2>
 
@@ -64,12 +63,12 @@
   </div>
   <div class="w3-padding-64 w3-text-light-grey w3-large" style="font-weight:bold">
     <a href="#biography" class="w3-bar-item w3-button">Biography</a>
-<!--    <a href="#news" class="w3-bar-item w3-button">News</a>-->
+    <a href="#news" class="w3-bar-item w3-button">News</a>
 <!--    <a href="#projects" class="w3-bar-item w3-button">Projects</a>-->
 <!--    <a href="#talks" class="w3-bar-item w3-button">Talks</a>-->
-    <a href="#educations" class="w3-bar-item w3-button">Educations</a>
     <a href="#publications" class="w3-bar-item w3-button">Publications</a>
     <a href="#services" class="w3-bar-item w3-button">Services</a>
+    <a href="#educations" class="w3-bar-item w3-button">Educations</a>
     <a href="#awards" class="w3-bar-item w3-button">Awards</a>
     <a href="#resources" class="w3-bar-item w3-button">Resources</a>
   </div>
@@ -103,7 +102,7 @@
 <!--      <h1>Kaiqiang Wang</h1>-->
 <!--        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">-->
           <strong>Kaiqiang Wang</strong> is now a postdoctoral fellow in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong.
-          Before that, he did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong.
+          Before that, he did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/people/pi">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong.
           He received his PhD at Northwestern Polytechnical University under the supervision of <a href="https://scholar.google.com/citations?user=i0cHhBQAAAAJ">Prof. Jianlin Zhao</a>, <a href="https://teacher.gdut.edu.cn/jiangleidi">Prof. Jianglei Di</a>, and <a href="https://www3.ntu.edu.sg/home/mkmqian/">Prof. Kemao Qian</a>.
           <br><br>He is an enthusiast for <strong>computational imaging</strong> and <strong>deep learning</strong>.
         </p>
@@ -116,31 +115,20 @@
         </tbody></table>
   </div>
 
+<!-- The News Section -->
+  <div class="w3-container w3-light-grey w3-padding-32" id="news">
+   <h2>News</h2>
+      <p><li> 04/2024, an <span style="color:FireBrick">invited talk</span> will be given at <a href="https://cd2024.piers.org/session.html?sid=S137">PIERS2024</a>.</li></p>
+      <p><li> 01/2024, a <span style="color:FireBrick">cover paper</span> entitled "On the use of deep learning for phase recovery" was published on <a href="https://doi.org/10.1038/s41377-023-01340-x"><a href="https://doi.org/10.1038/s41377-023-01340-x"><em>Light: Science and Applications</em></a>.</li></p>
+      <p><li> 03/2023, continue working in Hong Kong at <a href="https://isl.eee.hku.hk/">ISL@HKU</a>.</li></p>
+      <p><li> 07/2022, became Dr. Wang and started career at <a href="https://www.lambcuhk.org/">LAMB@CUHK</a>.</li></p>
 
-    <!-- The Educations Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="educations">
-    <h2>Educations</h2>
-      <p>
-      <li><em>2016-2022</em>, Northwestern Polytechnical University, Xi'an, China.
-      <br>
-      PhD, Optical Engineering
-      </p>
-
-
-      <li><em>2012-2016</em>, Northwestern Polytechnical University, Xi'an, China.
-      <br>
-      BSc, Applied Physics
-      </p>
-
-      </p>
-      </li>
   </div>
 
 
 
-
  <!-- The Publications Section -->
-  <div class="w3-container  w3-padding-32" id="publications">
+  <div class="w3-container   w3-padding-32" id="publications">
     <h2>Publications</h2>
       <p class="w3-left-align" style="line-height:200%">
 
@@ -154,7 +142,7 @@
         <br>
         <strong>K. Wang</strong>, L. Song, C. Wang, Z. Ren, G. Zhao, J. Dou, J. Di, G. Barbastathis, R. Zhou, J. Zhao, E. Lam
         <br>
-        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">code</a> |  <span style="color:red">Cover Paper</span>
+        <em>Light: Science & Applications</em> 2024 | <a style="color: #447ec9" href="https://github.com/kqwang/phase-recovery">code</a> |  <span style="color:FireBrick">Cover Paper</span>
         <br>
         <a style="color: #447ec9" href="https://phys.org/news/2024-01-deep-phase-recovery.html">Phys.org</a> | <a style="color: #447ec9" href="https://www.eurekalert.org/news-releases/1030138">Eurekalert!</a> | <a style="color: #447ec9" href="https://www.azooptics.com/News.aspx?newsID=28547">Azooptics</a> |<a style="color: #447ec9" href="https://mp.weixin.qq.com/s/SCPb9moq5thO8u6YH02lZQ">WeChatNews1</a> |<a style="color: #447ec9" href="https://mp.weixin.qq.com/s/WDpECC6F3Im74wV6PaEcUg">WeChatNews2</a>
         </p>
@@ -172,7 +160,7 @@
         <br>
         <strong>K. Wang</strong>, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <span style="color:red">First article of this journal</span>
+        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a> | <span style="color:FireBrick">First article of this journal</span>
         </p>
 
         <p>
@@ -269,7 +257,7 @@
         <br>
         <strong>K. Wang</strong>, J. Dou, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics Letters</em> 2019 | <span style="color:red">Editors' Pick </span>
+        <em>Optics Letters</em> 2019 | <span style="color:FireBrick">Editors' Pick </span>
         </p>
 
         <p>
@@ -277,7 +265,7 @@
         <br>
         <strong>K. Wang</strong>, Y. Li, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:red">ESI Highly Cited Paper </span>
+        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:FireBrick">ESI Highly Cited Paper </span>
         </p>
 
         <p>
@@ -374,22 +362,37 @@
   <div class="w3-container w3-light-grey w3-padding-32" id="services">
     <h2>Services</h2>
     <h4> Journal Reviewer: </h4>
-    Nature Publishing Group: Light: Science & Applications.
+    <strong>Nature</strong>: Light: Science & Applications.
     <br>
     <br>
-    The Institute of Electrical and Electronics Engineers: IEEE Transactions on Image Processing, IEEE Photonics Technology Letters,
+    <strong>IEEE</strong>: IEEE Transactions on Image Processing, IEEE Photonics Technology Letters,
 IEEE Photonics Journal.
     <br>
     <br>
-    Optica Publishing Group: Biomedical Optics Express, Optics Express, Applied Optics, Journal of the Optical Society
+    <strong>Optica</strong>: Biomedical Optics Express, Optics Express, Applied Optics, Journal of the Optical Society
 of America A, Optics Continuum.
     <br>
     <br>
-    Elsevier: Optics and Lasers in Engineering, Optics Communications.
+    <strong>Elsevier</strong>: Optics and Lasers in Engineering, Optics Communications.
+  </div>
+
+
+<!-- The Educations Section -->
+  <div class="w3-container w3-padding-32" id="educations">
+    <h2>Educations</h2>
+      <li><em>2016-2022</em>, Northwestern Polytechnical University, Xi'an, China.
+      <br>
+      PhD, Optical Engineering</li>
+      <br>
+      <li><em>2012-2016</em>, Northwestern Polytechnical University, Xi'an, China.
+      <br>
+      BSc, Applied Physics
+      </li>
+
   </div>
 
   <!-- The awards Section -->
-  <div class="w3-container w3-padding-32" id="awards">
+  <div class="w3-container w3-light-grey w3-padding-32" id="awards">
     <h2>Awards</h2>
       <p>
       <li> He was awarded the honor of <em>Three Good Student</em> and the <em>Excellent Young Pioneer</em> at the student period.
@@ -399,7 +402,7 @@ of America A, Optics Continuum.
   </div>
 
     <!-- The Resources Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="resources">
+  <div class="w3-container  w3-padding-32" id="resources">
     <h2>Resources</h2>
       <p>
         <ol>
