--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
       <p><li> 04/2024, an <span style="color:FireBrick">invited talk</span> will be given at <a href="https://cd2024.piers.org/session.html?sid=S137">PIERS2024</a>.</li></p>
-      <p><li> 01/2024, a <span style="color:FireBrick">cover paper</span> entitled "On the use of deep learning for phase recovery" was published on <a href="https://doi.org/10.1038/s41377-023-01340-x"><a href="https://doi.org/10.1038/s41377-023-01340-x"><em>Light: Science and Applications</em></a>.</li></p>
+      <p><li> 01/2024, a <span style="color:FireBrick">cover paper</span> was published on <a href="https://doi.org/10.1038/s41377-023-01340-x"><a href="https://doi.org/10.1038/s41377-023-01340-x"><em>Light: Science and Applications</em></a>.</li></p>
       <p><li> 03/2023, continue working in Hong Kong at <a href="https://isl.eee.hku.hk/">ISL@HKU</a>.</li></p>
       <p><li> 07/2022, became Dr. Wang and started career at <a href="https://www.lambcuhk.org/">LAMB@CUHK</a>.</li></p>
 
