--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
           <a href="mailto:kqwang.optics@gmail.com">Email</a> &nbsp/&nbsp
           <a href="https://github.com/kqwang">Github</a> &nbsp/&nbsp
           <a href="https://scholar.google.com/citations?user=K_TBJDUAAAAJ&hl">Google Scholar</a>
+          <a href="https://www.researchgate.net/profile/Kaiqiang-Wang-5">ResearchGate</a> &nbsp/&nbsp
         </p>
         </tbody></table>
   </div>
