--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
         </p>
 
         <p class="w3-center">
-          <a href="mailto:kqwang.optics@gmail.com">Email</a> &nbsp/&nbsp
-          <a href="https://github.com/kqwang">Github</a> &nbsp/&nbsp
-          <a href="https://scholar.google.com/citations?user=K_TBJDUAAAAJ&hl">Google Scholar</a>
-          <a href="https://www.researchgate.net/profile/Kaiqiang-Wang-5">ResearchGate</a> &nbsp/&nbsp
+          <a href="mailto:kqwang.optics@gmail.com">Email</a> |
+          <a href="https://github.com/kqwang">Github</a> |
+          <a href="https://scholar.google.com/citations?user=K_TBJDUAAAAJ&hl">Google Scholar</a> |
+          <a href="https://www.researchgate.net/profile/Kaiqiang-Wang-5">ResearchGate</a>
         </p>
         </tbody></table>
   </div>
